Overflow fixes

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -39,10 +39,6 @@ body {
   /*we put color in body because - color gets inherited*/
 }
 
-.container {
-  overflow: hidden;
-}
-
 .top-container {
   /* width: 960px; */
   width: 67.5rem;
@@ -242,6 +238,7 @@ header {
 /*DESIGN FOR THE FUTURE SECTION */
 /*------------------------ */
 .designed-for-the-future-section {
+  overflow: hidden;
   width: 67.5rem;
   margin: 0 auto;
   margin-bottom: 8.6rem;
@@ -328,8 +325,8 @@ header {
   /* span from grid column line 1 to 3 (i.e., span 2 columns) */
   grid-row: 2/4;
   margin-left: -7rem;
-  margin-top: -7rem;
-  width: 50rem;
+  margin-top: -1rem;
+  width: 40rem;
 }
 
 /*------------------------ */
